--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
 <header><title>New Tab</title></header>
 <body>
+ <link rel="stylesheet" type="text/css" href="Search.css">	
 <section class="webdesigntuts-workshop">
 	<form action="" method="">		    
 		<input type="search" placeholder="What are you looking for?">		    	
 		<button>Search</button>
 	</form>
 </section>
- <link rel="stylesheet" type="text/css" href="search.css">
 
 
 </body>
