--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
  <link rel="stylesheet" type="text/css" href="Search.css">	
 <section class="webdesigntuts-workshop">
 	<form action="" method="">		    
-		<input type="search" placeholder="What are you looking for?">		    	
-		<button>Search</button>
+		<input type="search" placeholder="عن ماذا تبحث ؟">		    	
+		<button>ابحث</button>
 	</form>
 </section>
 
